docs(faq): fact-check and expand engine capabilities and persistence details